--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -14,6 +14,6 @@ div#wall #tag-3.wicked.slick{
   display:none
 }
 
-div#wall .parent>#tag-5.slick{
+#wall div.parent>#tag-5.slick{
   display:none
 }
