--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -19,6 +19,6 @@ div#wall div.parent #tag-5.slick{
 }
 
 div#wall div.parent div:last-child div#tag-6{
-  display:none
+  display:none;
   background-color:black;
 }
