--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -19,6 +19,5 @@ div#wall div.parent #tag-5.slick{
 }
 
 div#wall div.parent div:last-child div#tag-6{
-  display:none;
-  background-color:black;
+  height:100px;
 }
