--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -18,6 +18,6 @@ div#wall div.parent #tag-5.slick{
   display:none
 }
 
-div#wall div.parent div:first-child div#tag-6{
+div#tag-6{
   height:100px;
 }
