--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -21,3 +21,6 @@ div#wall div.parent #tag-5.slick{
 div#wall div.parent div:nth-child(2){
   display:none;
 }
+body div#wall div.parent div > #tag-7.slick{
+  display:none
+}
